--- a/popup.html
+++ b/popup.html
@@ -20,6 +20,9 @@
     <p>Loading...</p>
   </div>
 
+
+  <a id="help-link" href="chrome-extension://kocjdheiokihandfdimbdlfhclcjfcof/help.html">Help!</a>
+
   <a id="reset-chrome-storage" href="#">Log out</a>
 </div>
 
