bugfix on set creation

--- a/authorized.html
+++ b/authorized.html
@@ -7,23 +7,17 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-
 <div class='container'>
   <p id='authorized'>Authorized Quizlet</p>
-  
   <div class="loading" style="display: none;">
     <div class='wrapper'>
       <div id="loader"></div>
     </div>
     <p>Loading...</p>
   </div>
-
+  <a id="help-link" href="chrome-extension://kocjdheiokihandfdimbdlfhclcjfcof/help.html">Help!</a>
   <a id="reset-chrome-storage" href="#">Log out</a>
-  
 </div>
-
-
 <script src="helpers.js"></script>
-
 </body>
 </html>
