--- a/help.html
+++ b/help.html
@@ -35,6 +35,8 @@
     <li>Through <a href="https://translate.google.com">Google Translate</a>. Go to <a href="https://translate.google.com">translate.google.com</a> and look up a translation. Then, click the blue "Add to Quizlet" button. Presto! Your word and its translation goes straight to your Flash-Spanish Quizlet set.</li>
 
     <li>Through the Google Translate <a href="https://chrome.google.com/webstore/detail/google-translate/aapbdbdomjkkjkaonfhkkikfgjllcleb">Chrome extension</a>. Enable the extension, then any word you look up will be added straight to your Quizlet. Try it out!</li>
+
+    <li>Through the app! (Coming soon)</li>
   </ol>
 
 
