--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div class='container'>
+  <h4><i>Flash Spanish</i></h4>
   <div id='quizlet-auth'>
     <input type='button' value='Authorize Quizlet' class='jfk-button jfk-button-action' />
   </div>
@@ -18,7 +19,8 @@
     <p>Loading...</p>
   </div>
   <a id="help-link" href="chrome-extension://kocjdheiokihandfdimbdlfhclcjfcof/help.html">Help!</a>
-  <a id="reset-chrome-storage" href="#">Log out</a>
+  <!-- <a id="reset-chrome-storage" href="#">Log out</a> -->
+  <div id="buffer"></div>
 </div>
 <script src="helpers.js"></script>
 </body>
