--- a/popup.html
+++ b/popup.html
@@ -18,8 +18,7 @@
     </div>
     <p>Loading...</p>
   </div>
-  <a id="help-link" href="chrome-extension://kocjdheiokihandfdimbdlfhclcjfcof/help.html">Help!</a>
-  <!-- <a id="reset-chrome-storage" href="#">Log out</a> -->
+  <a id="help-link" href="help.html">Help!</a>
   <div id="buffer"></div>
 </div>
 <script src="helpers.js"></script>
