--- a/help.html
+++ b/help.html
@@ -9,7 +9,6 @@
       margin: 20px;
       width: 400px;
     }
-
     #back-button {
       position: absolute;
       text-align: right;
@@ -21,31 +20,19 @@
 <body>
 <div class="container help">
   <h1>Help</h1>
-
-  <a id="back-button" href="chrome-extension://kocjdheiokihandfdimbdlfhclcjfcof/popup.html">
-    Back
-  </a>
-
+  <a id="back-button" href="popup.html">Back</a>
   <h2>What is Flash-Spanish?</h2>
   <p>Flash-Spanish is a language learning Chrome extension that lets learners easily create Quizlet flashcards of all the words they look up online.</p>
-
   <h2>How does it work?</h2>
   <p>There are a few ways to use Flash-Spanish:</p>
   <ol>
     <li>Through <a href="https://translate.google.com">Google Translate</a>. Go to <a href="https://translate.google.com">translate.google.com</a> and look up a translation. Then, click the blue "Add to Quizlet" button. Presto! Your word and its translation goes straight to your Flash-Spanish Quizlet set.</li>
-
     <li>Through the Google Translate <a href="https://chrome.google.com/webstore/detail/google-translate/aapbdbdomjkkjkaonfhkkikfgjllcleb">Chrome extension</a>. Enable the extension, then any word you look up will be added straight to your Quizlet. Try it out!</li>
-
     <li>Through the app! (Coming soon)</li>
   </ol>
-
-
   <h2>How do I begin?</h2>
   <p>You can start by creating a Quizlet account and authorizing Flash-Spanish to add cards to it. Just click on the Flash-Spanish icon and then the blue "Authorize Quizlet" button. After that, you're ready to go!</p>
-
 </div>
-
 <script src="helpers.js"></script>
-
 </body>
 </html>
