fixed logic error in background.js regarding set names

--- a/authorized.html
+++ b/authorized.html
@@ -47,6 +47,7 @@
       <option value="cs">Czech</option>
       <option value="da">Danish</option>
       <option value="nl">Dutch</option>
+      <option value="en">English</option>
       <option value="eo">Esperanto</option>
       <option value="et">Estonian</option>
       <option value="fi">Finnish</option>
@@ -110,6 +111,7 @@
       <option value="sk">Slovak</option>
       <option value="sl">Slovenian</option>
       <option value="so">Somali</option>
+      <option value="es">Spanish</option>
       <option value="su">Sundanese</option>
       <option value="sw">Swahili</option>
       <option value="sv">Swedish</option>
